tests/ui/macros/genercs-in-path-with-prettry-hir.stderr
error: unexpected generic arguments in path
  --> $DIR/genercs-in-path-with-prettry-hir.rs:13:10
   |
LL | m!(inline<u8>);
   |          ^^^^

error: aborting due to 1 previous error

